--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- <link rel="icon" href="" /> -->
     <title>• Plant-Tamagotchi •</title>
     <script src="p5.min.js"></script>
+    <script src="gsap.min.js"></script>
     <script type="module" src="p5setup.js"></script>
     <link rel="stylesheet" type="text/css" href="tamagotchi.css" />
   </head>
